# agent-sandbox

./: Makefile
api/v1beta1/: groupversion_info.go
controllers/: sandbox_controller.go  sandbox_controller_test.go
dev/tools/: create-kind-cluster
docs/: apf-insulation.md  go_sdk_reference.md
examples/: README.md
examples/apf-insulation/: README.md  apf-insulation.yaml
examples/firecracker-sandbox/: Dockerfile  README.md  main.py  requirements.txt  sandbox-firecracker.yaml  sandbox-template-firecracker.yaml  setup.sh  test_client.py
examples/openclaw-gvisor-sandbox/: .gitignore  README.md  SYNC_NOTES.md  TESTS_PROPOSAL.md  openclaw-sandboxclaim.yaml  openclaw-sandboxtemplate.yaml  openclaw-template.yaml  plan.md  pyproject.toml  pytest.ini  requirements-test.txt  run-test-kind.sh  service.yaml  snapshot_cycle.py
examples/openclaw-gvisor-sandbox/routerpoc/: README.md  router.yaml  run.sh  tenant-a.yaml  tenant-b.yaml  verify.sh
examples/openclaw-gvisor-sandbox/tests/: README.md  _helpers.py  conftest.py  example-pod-snapshot-policy.yaml  example-pod-snapshot-storage-config.yaml  test_bootstrap.py  test_connections.py  test_cron_gateway.py  test_idleness.py  test_memory.py  test_pvc_preservation.py  test_snapshot_preservation.py
examples/openclaw-gvisor-sandbox/tests/loadtest/: README.md
extensions/controllers/: sandboxclaim_controller.go  sandboxclaim_controller_test.go  sandboxclaim_pod_exclusivity_test.go  sandboxtemplate_controller_test.go  sandboxwarmpool_controller_test.go
internal/metrics/: sandbox_collector.go  sandbox_collector_test.go
(+26 files in other folders)
