[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-sandbox-tests"
version = "0.1.0.dev0"
description = "Test suite for the OpenClaw + Agent Sandbox integration example."
readme = "tests/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
    "aiohttp",
    "requests",
    "kubernetes",
    "k8s-agent-sandbox",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: opt-in tests that require a real Kubernetes cluster (see tests/README.md)",
    "loadtest: reserved for Group 8 ClusterLoader2 wrappers in a follow-up PR",
]
